# programming_team_code_rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: check_code_cov.py  ci.yml  clean.sh  code_cov.sh  shellcheck_shfmt.sh  test-expand.sh
.verify-helper/: timestamps.remote.json
examples/: README.md  binomial_coefficient_prime_mod.rs  lca.rs  lca_aizu.rs  lcm.rs  point_add_range_sum.rs  primes.rs  range_sum_query.rs  shortest_path.rs  sssp.rs  staticrmq.rs  unionfind.rs  unionfind_aizu.rs
examples/data_structures/: binary_trie.rs  deq_agg.rs  deque.rs  disjoint_rmq_non_commutative.rs  dsu_aizu.rs  dsu_yosupo.rs  fenwick_aizu.rs  fenwick_kth.rs  fenwick_yosupo.rs  lazy_seg_tree.rs  lazy_seg_tree_build_on_array.rs  linear_rmq.rs  range_container_aizu.rs  range_container_handmade.rs  rmq.rs  seg_tree_aizu.rs  seg_tree_build_on_array.rs  seg_tree_yosupo.rs  trie.rs
examples/graphs/: bridges_aizu.rs  bridges_yosupo.rs  count_paths_per_length.rs  cuts_aizu.rs  cuts_yosupo.rs  dijk_aizu.rs  dijk_yosupo.rs  hld_aux_tree.rs  hld_jump_on_path.rs  hld_jump_on_tree.rs  hld_jump_on_tree_edges.rs  hld_jump_on_tree_nodes.rs  hld_lca_aizu.rs  hld_lca_yosupo.rs  hld_path_composite_yosupo.rs  hld_path_sum1_aizu.rs  hld_path_sum2_aizu.rs  hld_path_sum_aizu.rs  hld_path_sum_yosupo.rs  hld_subtree_sum_yosupo.rs  hopcroft_karp_aizu.rs  hopcroft_karp_asserts.rs  hopcroft_karp_yosupo.rs  lca_rmq_aizu.rs  lca_rmq_next_on_path.rs  lca_yosupo.rs  scc.rs  two_sat.rs
examples/helpers/: compress.rs  interval_container.rs  lis_aizu.rs  lis_handmade.rs  lis_pop.rs  lis_yosupo.rs  range_container.rs  range_container_aizu.rs  range_container_handmade.rs  range_container_stress.rs
examples/monotonic/: cartesian_tree.rs  count_rects.rs  mono_st.rs
examples/numbers/: barrett.rs  binom.rs  ext_gcd.rs  extended_gcd.rs  mod_int.rs  primes_divisorize.rs  primes_factorize.rs  primes_is_prime.rs
examples/strings/: cmp_substrs.rs  cmp_sufs.rs  lcp_query_yosupo_palindrome.rs  lcp_query_yosupo_zfunc.rs  manacher.rs  suf_ary_cmp_aizu.rs  suf_ary_find_many_strs_aizu.rs  suf_ary_find_str_aizu.rs  suf_ary_find_substr_aizu.rs  suf_ary_find_substr_many_aizu.rs  suf_ary_push_pop_char_asserts.rs  suf_ary_push_pop_substr_asserts.rs  suffix_array.rs
src/: README.md  binom.rs  dijk.rs  dsu.rs  fenwick.rs  lca.rs  lib.rs  primes.rs  rmq.rs
src/data_structures/: binary_trie.rs  deq_agg.rs  deque.rs  disjoint_rmq.rs  dsu.rs  fenwick.rs  lazy_seg_tree.rs  linear_rmq.rs  mod.rs  range_container.rs  rmq.rs  seg_tree.rs  trie.rs
src/graphs/: block_vertex_tree.rs  bridges.rs  cent_decomp.rs  count_paths_per_length.rs  cuts.rs  dfs.rs  dfs_order.rs  dijk.rs  hld.rs  hopcroft_karp.rs  lca.rs  mod.rs  scc.rs  two_sat.rs
src/helpers/: compress.rs  interval_container.rs  lis.rs  mod.rs  random.rs  range_container.rs  recursive_closure.rs  recursive_fnmut.rs  unsafe_recursive_closure.rs  untested_rng.rs
src/monotonic/: cartesian_tree.rs  count_rects.rs  mod.rs  mono_range.rs  mono_st.rs
src/numbers/: barrett.rs  binom.rs  ext_gcd.rs  extended_gcd.rs  fft.rs  mod.rs  mod_int.rs  primes.rs
src/strings/: manacher.rs  mod.rs  suf_ary.rs  suffix_array.rs
