cargo-features = ["edition2024"]

[package]
name = "programming_team_code_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.5"
ac-library-rs = "0.1.1"

[[example]]
name = "binary_trie"
path = "examples/data_structures/binary_trie.rs"

[[example]]
name = "dsu_aizu"
path = "examples/data_structures/dsu_aizu.rs"

[[example]]
name = "dsu_yosupo"
path = "examples/data_structures/dsu_yosupo.rs"

[[example]]
name = "fenwick_aizu"
path = "examples/data_structures/fenwick_aizu.rs"

[[example]]
name = "fenwick_yosupo"
path = "examples/data_structures/fenwick_yosupo.rs"

[[example]]
name = "lazy_seg_tree"
path = "examples/data_structures/lazy_seg_tree.rs"

[[example]]
name = "rmq"
path = "examples/data_structures/rmq.rs"

[[example]]
name = "lazy_seg_tree_build_on_array"
path = "examples/data_structures/lazy_seg_tree_build_on_array.rs"

[[example]]
name = "trie"
path = "examples/data_structures/trie.rs"

[[example]]
name = "count_paths_per_length"
path = "examples/graphs/count_paths_per_length.rs"

[[example]]
name = "dijk_aizu"
path = "examples/graphs/dijk_aizu.rs"

[[example]]
name = "dijk_yosupo"
path = "examples/graphs/dijk_yosupo.rs"

[[example]]
name = "lca_rmq_aizu"
path = "examples/graphs/lca_rmq_aizu.rs"

[[example]]
name = "lca_rmq_yosupo"
path = "examples/graphs/lca_rmq_yosupo.rs"

[[example]]
name = "scc"
path = "examples/graphs/scc.rs"

[[example]]
name = "two_sat"
path = "examples/graphs/two_sat.rs"

[[example]]
name = "binom"
path = "examples/numbers/binom.rs"

[[example]]
name = "primes_factorize"
path = "examples/numbers/primes_factorize.rs"

[[example]]
name = "primes_is_prime"
path = "examples/numbers/primes_is_prime.rs"

[[example]]
name = "manacher"
path = "examples/strings/manacher.rs"

[[example]]
name = "seg_tree_yosupo"
path = "examples/data_structures/seg_tree_yosupo.rs"

[[example]]
name = "seg_tree_aizu"
path = "examples/data_structures/seg_tree_aizu.rs"

[[example]]
name = "hld_lca_yosupo"
path = "examples/graphs/hld_lca_yosupo.rs"

[[example]]
name = "hld_lca_aizu"
path = "examples/graphs/hld_lca_aizu.rs"

[[example]]
name = "hld_subtree_sum_yosupo"
path = "examples/graphs/hld_subtree_sum_yosupo.rs"

[[example]]
name = "hld_path_sum_yosupo"
path = "examples/graphs/hld_path_sum_yosupo.rs"

[[example]]
name = "hld_path_sum1_aizu"
path = "examples/graphs/hld_path_sum1_aizu.rs"

[[example]]
name = "hld_path_sum2_aizu"
path = "examples/graphs/hld_path_sum2_aizu.rs"

[[example]]
name = "hld_path_composite_yosupo"
path = "examples/graphs/hld_path_composite_yosupo.rs"

[[example]]
name = "hld_jump_on_tree_nodes"
path = "examples/graphs/hld_jump_on_tree_nodes.rs"

[[example]]
name = "hld_jump_on_tree_edges"
path = "examples/graphs/hld_jump_on_tree_edges.rs"

[[example]]
name = "lcp_query_yosupo_zfunc"
path = "examples/strings/lcp_query_yosupo_zfunc.rs"

[[example]]
name = "lcp_query_yosupo_palindrome"
path = "examples/strings/lcp_query_yosupo_palindrome.rs"

[[example]]
name = "cmp_substrs"
path = "examples/strings/cmp_substrs.rs"

[[example]]
name = "cmp_sufs"
path = "examples/strings/cmp_sufs.rs"
